--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "@tanstack/react-table": "^8.20.5",
+    "animejs": "^4.1.3",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
-    "@tanstack/react-table": "^8.20.5"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
